# SNARK

./: .dockerignore  .env.example  .env.production.example  .gitignore  CODING_STANDARDS.md  CURSOR_GUIDELINES.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tmp_commit_phase22.sh  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
components/: brand-logo.tsx  header.tsx  sidebar.tsx
docs/: TZ_MODULES_SNARK.md  (+2 more)
services/protocols/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  docker-compose.yml  pyproject.toml  rules.md
services/protocols/.github/workflows/: ci.yml
services/protocols/alembic/: env.py
services/protocols/alembic/versions/: 20260410_000001_create_protocol_tables.py
services/protocols/src/: main.py
services/protocols/src/api/v1/: protocols.py
services/protocols/src/bots/telegram/: bot.py
services/protocols/src/core/1c_connector/: __init__.py
services/protocols/src/core/celery_app/: __init__.py  app.py
services/protocols/src/core/config/: __init__.py
services/protocols/src/core/database/: __init__.py
services/protocols/src/core/rag/: __init__.py  service.py
services/protocols/src/core/security/: __init__.py  context.py
services/protocols/src/modules/protocols/: handlers.py  schemas.py  service.py  tasks.py  upload_media.py
services/protocols/src/modules/protocols/prompts/: action_items_extraction.jinja2  tone_analysis.jinja2
services/protocols/src/web/: ui.py
(+149 files in other folders)
